- Split out runSpeedTests into analysis.js - Included analysis.js on index.html - Added another speed test for Deep Key Non-Indexed Multi-Finds

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title></title>
         <script type="text/javascript" src="src/repository.js"></script>
+        <script type="text/javascript" src="util/analysis.js"></script>
     </head>
 
     <body>
